# nlp-project

./: .gitignore  Larger_Transformer_Comparison.ipynb  Notebook.ipynb  Other_Shallow_Parsing_Baselines.ipynb  README.md  Shallow_Parsing_IE_Application.ipynb  pyproject.toml  requirements.txt
dataset/: test.parquet  train.parquet
docs/: 10_slide_project_deck.md  README.md  dashboard.html
docs/01_project/: 01_overview.md  02_problem_statement.md  03_why_this_project.md
docs/02_research/: 01_field_background.md  02_recent_work.md  03_gap_and_project_positioning.md  04_references.md
docs/03_implementation/: 01_data.md  02_notebook_pipeline.md  03_modeling_decisions.md  04_engineering_issues_and_fixes.md  05_ie_application_notebook.md  06_chunk_to_event_bridge.md  07_streamlit_dashboard.md
docs/04_results/: 01_baseline_results.md  02_transformer_results.md  03_error_analysis.md  04_notebook_results_summary.md  05_larger_transformer_comparison.md  06_chunk_to_event_bridge_results.md  07_domain_specific_tokenization_innovation.md
docs/05_conclusion/: 01_conclusions.md  02_future_work.md
ipynb/: Chunk_to_Event_Cost_Aware_Bridge.ipynb  Domain_Specific_Tokenization_Chunk_Aware_Preprocessing.ipynb  Larger_Transformer_Comparison.ipynb  Notebook.ipynb
libs/chunk_event_dashboard/: README.md  app.py
libs/chunk_event_dashboard/src/chunk_event_dashboard/: __init__.py  constants.py  extraction.py  inference.py
