[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "evaluate>=0.4.6",
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "seqeval>=1.2.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "accelerate>=1.1.0"
]
